ListRow: Show source status in sidebar

--- a/data/ListRow.css
+++ b/data/ListRow.css
@@ -29,3 +29,8 @@
     min-width: 12px;
     background: @colorAccent;
 }
+
+.sidebar image {
+    -gtk-icon-style: symbolic;
+    color: @text_color;
+}
