Fix style provider and layout

--- a/data/TaskRow.css
+++ b/data/TaskRow.css
@@ -19,6 +19,10 @@
 */
 
 .due-date {
-    border-radius: 12px;
-    background: lightgray;
+    border-radius: 3px;
+    background: @SILVER_300;
+    color: @SILVER_900;
+    font-size: 0.9em;
+    font-weight: 600;
+    padding: 1px 6px;
 }
