TaskRow: Make task descriptions small

--- a/data/TaskRow.css
+++ b/data/TaskRow.css
@@ -18,11 +18,15 @@
 *
 */
 
+.description,
+.due-date {
+    font-size: 0.9em;
+}
+
 .due-date {
     border-radius: 3px;
     background: @SILVER_300;
     color: @SILVER_900;
-    font-size: 0.9em;
     font-weight: 600;
     padding: 1px 6px;
 }
