--- a/data/TaskRow.css
+++ b/data/TaskRow.css
@@ -18,17 +18,12 @@
 *
 */
 
-.description,
 .due-date {
-    font-size: 0.9em;
-}
-
-.due-date {
-    border-radius: 3px;
+    border-radius: 0.25em;
     background: @SILVER_300;
     color: @SILVER_900;
     font-weight: 600;
-    padding: 1px 6px;
+    padding: 0.15em 0.5em;
 }
 
 row:focus .due-date {
