--- a/data/TaskRow.css
+++ b/data/TaskRow.css
@@ -36,3 +36,7 @@ row:focus .due-date {
     background: alpha (@error_color, 0.2);
     color: @error_color;
 }
+
+row.selected {
+    background-color: alpha (@selected_fg_color, 0.5);
+}
