--- a/data/TaskRow.css
+++ b/data/TaskRow.css
@@ -27,6 +27,10 @@
     padding: 1px 6px;
 }
 
+row {
+    transition: all 250ms ease-in-out;
+}
+
 row:focus .due-date {
     background: alpha (@selected_fg_color, 0.2);
     color: inherit;
@@ -37,6 +41,8 @@ row:focus .due-date {
     color: @error_color;
 }
 
-row.selected {
-    background-color: alpha (@selected_fg_color, 0.5);
+row.card {
+    background-color: @base_color;
+    border-top: 1px solid @menu_separator;
+    padding-top: 6px;
 }
