--- a/data/TaskRow.css
+++ b/data/TaskRow.css
@@ -28,6 +28,7 @@
 }
 
 row {
+    border-radius: 3px;
     transition: all 250ms ease-in-out;
 }
 
@@ -43,6 +44,6 @@ row:focus .due-date {
 
 row.card {
     background-color: @base_color;
-    border-top: 1px solid @menu_separator;
+    margin-top: 1px;
     padding-top: 6px;
 }
