--- a/data/TaskRow.css
+++ b/data/TaskRow.css
@@ -32,9 +32,8 @@ row {
     transition: all 250ms ease-in-out;
 }
 
-row:focus .due-date {
-    background: alpha (@selected_fg_color, 0.2);
-    color: inherit;
+row:focus:not(.card) {
+    background-color: shade (@base_color, 0.8);
 }
 
 .past-due .due-date {
