--- a/data/TaskRow.css
+++ b/data/TaskRow.css
@@ -46,3 +46,9 @@ row.card {
     margin-top: 1px;
     padding-top: 6px;
 }
+
+row entry.flat  {
+    background: transparent;
+    border: none;
+    padding: 0;
+}
