--- a/data/TaskRow.css
+++ b/data/TaskRow.css
@@ -55,6 +55,10 @@ row entry.flat  {
     padding: 0;
 }
 
+row entry.flat:focus {
+    opacity: 1;
+}
+
 row:not(.card) entry.add-task {
     border-color: alpha (@text_color, 0.25);
 }
