--- a/data/TaskRow.css
+++ b/data/TaskRow.css
@@ -28,7 +28,6 @@
 }
 
 row {
-    border-radius: 3px;
     transition: all 250ms ease-in-out;
 }
 
@@ -43,9 +42,12 @@ row:focus:not(.card) {
 
 row.card {
     background-color: @base_color;
-    margin-bottom: 12px;
-    margin-top: 1px;
-    padding-top: 6px;
+    padding-top: 8px;
+}
+
+row.card.collapsed {
+    box-shadow: inset 0 0 0 1px alpha (#000, 0.05),
+        inset 0 -1px 2px alpha (#000, 0.22);
 }
 
 row entry.flat  {
