--- a/data/TaskRow.css
+++ b/data/TaskRow.css
@@ -40,8 +40,7 @@ row.card {
     padding-top: 8px;
 }
 
-
-row.card.collapsed {
+row.card:not(.add-task).collapsed {
     box-shadow: inset 0 1px 0 0 alpha (#000, 0.05),
         inset -2px -2px 2px -2px alpha (#000, 0.22);
 }
@@ -57,7 +56,7 @@ row entry.flat:focus {
     opacity: 1;
 }
 
-row:not(.card) entry.add-task,
+row.add-task:not(.card) entry,
 row.card entry {
     border-color: alpha (@text_color, 0.25);
     padding-bottom: 3px;
