--- a/data/Sidebar.css
+++ b/data/Sidebar.css
@@ -19,9 +19,5 @@
 */
 
 .sidebar {
-    border-bottom-left-radius: 4px;
-}
-
-.sidebar:dir(rtl) {
-    border-bottom-right-radius: 4px;
+    border-right: 1px solid alpha (black, 0.25);
 }
