--- a/data/SourceRow.css
+++ b/data/SourceRow.css
@@ -19,18 +19,17 @@
 */
 
 .source-color {
-    border: 1px solid @border_color;
-    border-radius: 12px;
+    background: @colorAccent;
+    border: 1px solid @borders;
+    border-radius: 50%;
     box-shadow:
         inset 0 1px 0 0 alpha (@inset_dark_color, 0.7),
         inset 0 0 0 1px alpha (@inset_dark_color, 0.3),
         0 1px 0 0 alpha (@bg_highlight_color, 0.3);
-    min-height: 12px;
-    min-width: 12px;
-    background: @colorAccent;
+    min-height: 14px;
+    min-width: 14px;
 }
 
 .sidebar image {
-    -gtk-icon-style: symbolic;
     color: @text_color;
 }
