--- a/data/TaskRow.css
+++ b/data/TaskRow.css
@@ -18,13 +18,26 @@
 *
 */
 
-.due-date {
+entry-popover {
+    border-radius: 3px;
     border-radius: 3px;
     background: @SILVER_300;
+    border: 1px solid @SILVER_300;
+    background: @theme_bg_color;
+    color: @SILVER_900;
     color: @SILVER_900;
     font-size: 0.9em;
+    font-size: 0.9em;
+    font-weight: 600;
     font-weight: 600;
     padding: 3px 6px;
+    padding: 3px 6px;
+}
+
+entry-popover.error {
+    background: alpha (@error_color, 0.2);
+    border-color: alpha (@error_color, 0.4);
+    color: @error_color;
 }
 
 row {
@@ -33,11 +46,6 @@ row {
 
 row:focus:not(.card) {
     background-color: shade (@base_color, 0.8);
-}
-
-.past-due .due-date {
-    background: alpha (@error_color, 0.2);
-    color: @error_color;
 }
 
 row.card {
