--- a/data/TaskRow.css
+++ b/data/TaskRow.css
@@ -47,3 +47,7 @@ row entry.flat:focus {
 row:not(.card) entry.add-task {
     border-color: alpha (@text_color, 0.25);
 }
+
+row.during-dnd {
+    background-color: #FF0000;
+}
