--- a/data/TaskRow.css
+++ b/data/TaskRow.css
@@ -18,37 +18,37 @@
 *
 */
 
-row {
+task-row {
     transition: all 250ms ease-in-out;
 }
 
-row:focus:not(.card) {
+task-row:focus:not(.card) {
     background-color: shade(@base_color, 0.8);
 }
 
-row.card {
+task-row.card {
     background-color: @base_color;
     margin-bottom: 12px;
     margin-top: 1px;
     padding-top: 6px;
 }
 
-row entry.flat  {
+task-row entry.flat  {
     background: transparent;
     border-style: solid;
     border-color: transparent;
     padding: 0;
 }
 
-row entry.flat:focus {
+task-row entry.flat:focus {
     opacity: 1;
 }
 
-row:not(.card) entry.add-task {
+task-row:not(.card) entry.add-task {
     border-color: alpha(@text_color, 0.25);
 }
 
-row.drag-active {
+task-row.drag-active {
     background-color: @bg_color;
     border: 1px solid @borders;
     border-radius: 3px;
