--- a/data/Application.css
+++ b/data/Application.css
@@ -75,16 +75,12 @@ row.task.drag-active {
     min-width: 86px; /* https://github.com/elementary/granite/issues/577#issuecomment-1318979272 */
 }
 
-.source-color {
-    background: @colorAccent;
-    border: 1px solid @borders;
+.circular-progress-bar {
+    border: 2px solid @accent_color;
     border-radius: 50%;
-    box-shadow:
-        inset 0 1px 0 0 alpha(@inset_dark_color, 0.7),
-        inset 0 0 0 1px alpha(@inset_dark_color, 0.3),
-        0 1px 0 0 alpha(@bg_highlight_color, 0.3);
-    min-height: 14px;
-    min-width: 14px;
+    min-width: 8px;
+    min-height: 8px;
+    padding: 2px;
 }
 
 .sidebar image {
